--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
 .App {
   text-align: center;
+  background-color: #424242;
+  color: #fff;
+  padding: 25px;
 }
+
+
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
