--- a/src/Stock.css
+++ b/src/Stock.css
@@ -1,12 +1,6 @@
 .stock {
-    background-color: #212121;
+  /* background-color: #212121;*/
+  margin-bottom: 5px;
+
 }
 
-.row {
-    display: flex;
-    justify-content: center;
-}
-.col {
-    width: 100%;
-    align-self: center;
-}
